# osmPhone

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEV_LOG.md  Makefile  README.md  TEST_PLAN.md  config.example.yaml
osm-bt/: Package.swift
osm-bt/Sources/OsmBT/: BluetoothManager.swift  HCIDeviceClass.swift  HandsFreeController.swift  Info.plist  Protocol.swift  RFCOMMHandsFreeController.swift  SCOAudioBridge.swift  SMSController.swift  SocketServer.swift  main.swift
osm-bt/Tests/OsmBTTests/: ProtocolTests.swift
osm-core/: pyproject.toml
osm-core/osm_core/: __init__.py  bt_bridge.py  config.py  main.py  store.py  ws_server.py
osm-core/osm_core/audio/: pipeline.py  realtime.py  resampler.py  vad.py
osm-core/osm_core/llm/: engine.py
osm-core/osm_core/sms/: conversation.py  handler.py
osm-core/osm_core/stt/: engine.py
osm-core/osm_core/tts/: engine.py
osm-core/tests/: test_audio_pipeline.py  test_bt_bridge.py  test_config.py  test_llm_engine.py  test_realtime_pipeline.py  test_resampler.py  test_sms_handler.py  test_store.py  test_stt_engine.py  test_tts_engine.py  test_vad.py  test_ws_server.py
scripts/: bt_test_client.py  enable-hfp-sink.sh  hfp_connect_test.py  hfp_full_flow.py  hfp_test_full.py  install.sh  launch.sh
